# FutureLearn

./: .gitignore
Haskell/Week 2/: starman.hs
Haskell/Week 2/Starman/: Starman.cabal
Haskell/Week 2/Starman/src/Phoityne/Example/: Math.hs
Haskell/Week 2/Starman/test/Phoityne/Example/: MathSpec.hs
Haskell/Week 3/: Tree.hs
Haskell/Week2/Starman/: LICENSE  README.md  Starman.cabal
Haskell/Week2/Starman/app/: Main.hs
Haskell/Week2/Starman/src/: Starman.hs
Haskell/Week4/ParsecTutorial/: ParsecTutorial.cabal  README.md
Haskell/Week4/ParsecTutorial/app/: Main.hs
Haskell/Week4/ParsecTutorial/src/: ParsecTutorial.hs  ShowParser.hs
Haskell/Week4/ParsecTutorial/test/: ShowParserSpec.hs  SpecHelper.hs
