name:                Starman
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tjaskula/Starman#readme
license:             BSD3
license-file:        LICENSE
author:              Tomasz Jaskula
maintainer:          thomasv1000@hotmail.fr
copyright:           Tomasz Jaskula
category:            Learning Haskell
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable Starman-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Starman
  default-language:    Haskell2010

test-suite Starman-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec >= 2.2
                     , Starman
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tjaskula/FutureLearn
